# autorider

./: .envrc  LICENSE  README.md  default.nix  flake.nix  lib.nix  pyproject.toml
.github/workflows/: nix-github-actions.yml
doc/: book.toml  default.nix
doc/src/: SUMMARY.md  getting-started.md  install.md  introduction.md
src/autorider/: cli.py  config.py  download.py  lib.py  manager.py  manylinux.py  output.py  pep517.py  process.py  readers.py  scanners.py
src/autorider/uv/: __init__.py  lock1.py
tests/: test_lib.py  test_pep517.py  test_uv.py
